# tools-for-lakeagent

./: .dockerignore  .gitignore  Dockerfile  PI_PROJECT_SUMMARY.md  README.md  _write_files.py  aurum.db  aurum_audit_summary.md  aurum_feature_reference.md  aurum_v2_agent_analysis.md  aurum_v2_dependency_map.md  graph.html  port.md  pyproject.toml  requirements.txt  setup.py
aurum/: __init__.py  cli.py  config.py
aurum/discovery/: __init__.py  algebra.py  data_on_demand.py  result_set.py
aurum/graph/: __init__.py  field_network.py  network_builder.py  relations.py
aurum/materialization/: __init__.py  join_engine.py  view_analysis.py
aurum/profiler/: __init__.py  column_profiler.py  text_utils.py
aurum_legacy/: aurum_feature_reference.md
aurum_v2/: __init__.py  aurum.db  config.py  graph.html  interactive.py  pipeline.py  s3_list.py  s3_list_all.py  s3_search.py  test.py  test_e2e.py  verified_combined_dataset.txt  verified_datasources_for_tests.txt
aurum_v2/builder/: __init__.py  analysis.py  coordinator.py  network_builder.py
aurum_v2/discovery/: __init__.py  agent_api.py  agent_tools.json  algebra.py  api.py
aurum_v2/dod/: __init__.py  dod.py  join_utils.py  view_analysis.py
aurum_v2/graph/: __init__.py  field_network.py
aurum_v2/models/: __init__.py  annotation.py  drs.py  hit.py  provenance.py  relation.py
s3_loader/: combine_datasets.py  filter_metadata.py  s3_list_all.py  s3_list_all_json.py  test.py
tests/: __init__.py  test_algebra.py  test_config.py  test_join_engine.py  test_network_builder.py  test_profiler.py  test_v2_bug_fixes.py
(+12 files in other folders)
