[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aurum"
version = "0.1.0"
description = "Modern data lake discovery agent — spiritual successor to Aurum (2018)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "aurum Contributors" }]

dependencies = [
    "polars>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "datasketch>=1.6",
    "sentence-transformers>=3.0",
    "networkx>=3.3",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "click>=8.1",
    "rich>=13.0",
    "tqdm>=4.66",
    "psutil>=5.9",
    "pyarrow>=17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
aurum = "aurum.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
